--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "8.*",
         "drupal/honeypot": "^1.29",
+        "drupal/webform": "^5.1",
         "drush/drush": "^8.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
