--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,25 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal/address": "^1.4",
         "drupal/admin_toolbar": "^1.26",
+        "drupal/config_update": "^1.6",
         "drupal/console": "^1.0.2",
         "drupal/core": "8.*",
+        "drupal/devel": "^2.0",
+        "drupal/entity_reference_revisions": "^1.6",
+        "drupal/features": "^3.8",
         "drupal/honeypot": "^1.29",
+        "drupal/imce": "^1.7",
+        "drupal/leading_zeros_formatter": "1.x-dev",
+        "drupal/paragraphs": "^1.6",
+        "drupal/profile": "^1.0@RC",
+        "drupal/registration_link": "^1.0",
+        "drupal/registration_role": "^1.1@beta",
+        "drupal/rules": "^3.0@alpha",
+        "drupal/token": "^1.5",
         "drupal/webform": "^5.1",
+        "drupal/zurb_foundation": "^6.0",
         "drush/drush": "^8.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
