--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "8.*",
         "drupal/devel": "^2.0",
+        "drupal/encrypt": "^3.0@RC",
         "drupal/entity_reference_revisions": "^1.6",
         "drupal/features": "^3.8",
         "drupal/honeypot": "^1.29",
