Updated composer.json to use renamed Github username/project (lowercase).

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ForsythInstitute/MyMouthMyNose.org",
+    "name": "forsythinstitute/mymouthmynose",
     "description": "Project for the MyMouthMyNose Forsyth Institute Portal",
     "type": "project",
     "license": "GPL-2.0-or-later",
