--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,16 @@
         "drupal/features": "^3.8",
         "drupal/honeypot": "^1.29",
         "drupal/imce": "^1.7",
+        "drupal/inline_entity_form": "^1.0@RC",
         "drupal/leading_zeros_formatter": "1.x-dev",
         "drupal/paragraphs": "^1.6",
         "drupal/profile": "^1.0@RC",
         "drupal/registration_link": "^1.0",
         "drupal/registration_role": "^1.1@beta",
+        "drupal/responsive_background_image": "^1.0@alpha",
         "drupal/rules": "^3.0@alpha",
         "drupal/token": "^1.5",
+        "drupal/twig_tweak": "^2.4",
         "drupal/webform": "^5.1",
         "drupal/zurb_foundation": "^6.0",
         "drush/drush": "^8.0.0",
