Added PRLP module, updated Admin Toolbar.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/address": "^1.4",
-        "drupal/admin_toolbar": "^1.26",
+        "drupal/admin_toolbar": "^2",
         "drupal/config_update": "^1.6",
         "drupal/console": "^1.0.2",
         "drupal/core": "8.*",
@@ -33,6 +33,7 @@
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/leading_zeros_formatter": "1.x-dev",
         "drupal/paragraphs": "^1.6",
+        "drupal/prlp": "^1.4",
         "drupal/profile": "^1.0@RC",
         "drupal/registration_link": "^1.0",
         "drupal/registration_role": "^1.1@beta",
